# herd-notify-slack

./: README.md  pyproject.toml
herd_notify_slack/: __init__.py  adapter.py
tests/: test_adapter.py
