[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "herd-notify-slack"
version = "0.0.1"
description = "Herd notification adapter for Slack."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Faust Eriksen" }
]
keywords = [
    "ai", "agents", "governance", "herd", "slack", "notifications",
    "notification-adapter", "messaging"
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "herd-core>=0.0.1",
]

[project.urls]
Homepage = "https://github.com/dbt-conceptual/herd-notify-slack"
Repository = "https://github.com/dbt-conceptual/herd-notify-slack"
Issues = "https://github.com/dbt-conceptual/herd-notify-slack/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]
